--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.645.0",
+    "@googlemaps/google-maps-services-js": "^3.4.0",
+    "bcrypt": "^5.1.1",
+    "jose": "^5.8.0",
+    "mongoose": "^8.6.1",
+    "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.8"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "eslint": "^8",
